# gpuprog-assignment1

./: .gitignore  CMakeLists.txt
src/: main.cpp
